--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home - My GitHub Pages Site</title>
+    <title>Contact - My GitHub Pages Site</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -17,9 +17,9 @@
         </nav>
     </header>
     <main>
-        <section class="hero">
-            <h1>Welcome to My GitHub Pages Site</h1>
-            <p>This is the homepage. Enjoy the animations!</p>
+        <section class="content">
+            <h1>Contact Us</h1>
+            <p>This is the contact page. Get in touch with us here.</p>
         </section>
     </main>
     <footer>
