--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <div class="page-transition"></div>
+    
     <nav>
         <div class="nav-content">
             <div class="logo">中凯</div>
@@ -22,7 +24,7 @@
         <section class="hero">
             <div class="glowing-circle"></div>
             <div class="hero-content">
-                <h1 class="typing-effect">美国双向短信组 【中凯】 队长</h1>
+                <h1 class="typing-effect" data-text="美国双向短信组 【中凯】 队长">美国双向短信组 【中凯】 队长</h1>
                 <p class="fade-in">Team Leader & Full Stack Developer</p>
             </div>
         </section>
@@ -30,7 +32,7 @@
         <section class="skills">
             <h2>Technical Expertise</h2>
             <div class="skill-grid">
-                <div class="skill-card">
+                <div class="skill-card" data-aos="fade-up">
                     <div class="skill-icon">
                         <div class="hexagon"></div>
                         <span>Frontend</span>
@@ -42,7 +44,7 @@
                         <li>Tailwind CSS</li>
                     </ul>
                 </div>
-                <div class="skill-card">
+                <div class="skill-card" data-aos="fade-up" data-aos-delay="100">
                     <div class="skill-icon">
                         <div class="hexagon"></div>
                         <span>Backend</span>
@@ -54,7 +56,7 @@
                         <li>SQL / NoSQL</li>
                     </ul>
                 </div>
-                <div class="skill-card">
+                <div class="skill-card" data-aos="fade-up" data-aos-delay="200">
                     <div class="skill-icon">
                         <div class="hexagon"></div>
                         <span>DevOps</span>
@@ -77,6 +79,35 @@
         document.addEventListener('mousemove', (e) => {
             cursor.style.left = e.clientX + 'px';
             cursor.style.top = e.clientY + 'px';
+        });
+
+        // Add hover effect to cursor
+        const links = document.querySelectorAll('a, button');
+        links.forEach(link => {
+            link.addEventListener('mouseenter', () => cursor.classList.add('hover'));
+            link.addEventListener('mouseleave', () => cursor.classList.remove('hover'));
+        });
+
+        // Page transition
+        document.addEventListener('DOMContentLoaded', () => {
+            const transition = document.querySelector('.page-transition');
+            transition.style.transform = 'scaleX(0)';
+        });
+
+        // Handle navigation with transition
+        document.querySelectorAll('a').forEach(link => {
+            link.addEventListener('click', (e) => {
+                if (link.hostname === window.location.hostname) {
+                    e.preventDefault();
+                    const transition = document.querySelector('.page-transition');
+                    transition.style.transformOrigin = 'left';
+                    transition.style.transform = 'scaleX(1)';
+                    
+                    setTimeout(() => {
+                        window.location.href = link.href;
+                    }, 500);
+                }
+            });
         });
     </script>
 </body>
